style1.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #36384D;
}

.container {
    width: 504px;
    height: 520px;
    border-radius: 36px;
    box-shadow: 0px 15px 60px 0px #00000040;
    background-color: white;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    padding-left: 64px;
    padding-right: 64px;
    text-align: start;
    font-family: "Roboto", serif;
}

.text1 {
    width: 376px;
    height: 112px;
    font-size: 56px;
    font-weight: 700;
    line-height: 56px;
    color: #242742;
}

.text2 {
    width: 376px;
    height: 72px;
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    color: #242742;
}

span {
    font-size: 16px;
    font-weight: 700;
    line-height: 24px;
    color: #242742;
}

.btn {
    width: 376px;
    height: 56px;
    border-radius: 8px;
    background: #242742;
    font-weight: 700;
    line-height: 24px;
    text-align: center;
    color: white;
    border: none;
}

.btn:hover {
    cursor: pointer;
    background: linear-gradient(204.47deg, #FF6A3A 0%, #FF527B 100%);
    box-shadow: 0px 16px 32px 0px #FF615580;
}

@media (max-width: 520px) {
    .container {
        width: 100vw;
        height: 100vh;
        border-radius: 0px;
        padding-left: 24px;
        padding-right: 24px;
        gap: 50px;
        align-items: center;
    }

    .text1 {
        height: 80px;
        width: 327px;
        line-height: 40px;
        font-size: 40px;
    }

    .text2 {
        width: 100%;
    }

    .btn {
        width: 327px;
        height: 56px;
    }

    .box {
        width: 327px;
height: 304px;
display: flex;
justify-content: space-between;
flex-direction: column;
    }

}

